# kitchensink

./: .gitignore  Cargo.toml  README.md  communicate-2dea3658e0c9b112.js  communicate-2dea3658e0c9b112_bg.wasm  communicate-6fd6d5285684c025.js  communicate-6fd6d5285684c025_bg.wasm  communicate-7a26d617305131a7.js  communicate-7a26d617305131a7_bg.wasm  communicate-889393c6787a060f.js  communicate-889393c6787a060f_bg.wasm  communicate-ddb5d33cf25bf18c.js  communicate-ddb5d33cf25bf18c_bg.wasm  communicate-fc45ac5959671519.js  communicate-fc45ac5959671519_bg.wasm  flake.nix  index.html  kitchensink-1e12d851a28b12b8.js  kitchensink-1e12d851a28b12b8_bg.wasm  kitchensink-428aa9ad8e2a1f44.js  kitchensink-428aa9ad8e2a1f44_bg.wasm  kitchensink-4802fc1cfd5094aa.js  kitchensink-4802fc1cfd5094aa_bg.wasm  kitchensink-4a18cd9a436069ec.js  kitchensink-4a18cd9a436069ec_bg.wasm  kitchensink-93bf1981676f6ef5.js  kitchensink-93bf1981676f6ef5_bg.wasm  kitchensink-a0a42a89041c7bf8.js  kitchensink-a0a42a89041c7bf8_bg.wasm  kitchensink-c54f9304e9d393a.js  kitchensink-c54f9304e9d393a_bg.wasm  kitchensink-ceb1c933e79637.js  kitchensink-ceb1c933e79637_bg.wasm  kitchensink-d3dfa480b697cb.js  kitchensink-d3dfa480b697cb_bg.wasm
.github/workflows/: publish.yml
snippets/dioxus-interpreter-js-dab579f08da5298b/: inline0.js
src/: account.rs  discord.rs  feeds.rs  home.rs  http.rs  lib.rs  login.rs  main.rs  navbar.rs  settings.rs  signup.rs  supabase.rs
