[package]
name = "communicate"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"

[dependencies]
# dioxus
dioxus = "0.3"
dioxus-web = "0.3"
dioxus-router = "0.3"

# clients
postgrest = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
