[package]
name = "kitchensink"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"

[dependencies]
# dioxus
fermi = "0.3"
dioxus = "0.3"
dioxus-web = "0.3"
dioxus-router = "0.3"

# clients
postgrest = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

# utils
log = "0.4"
gloo-storage = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
