[package]
name = "kitchensink"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"

[dependencies]
# dioxus
fermi = "0.3"
dioxus = "0.3"
dioxus-web = "0.3"
dioxus-router = "0.3"

# clients
postgrest = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

# utils
log = "0.4"
bytes = "1.4"
anyhow = "1.0"
futures = "0.3"
serde_json = "1.0"
wasm-logger = "0.2"
gloo-storage = "0.2"
serde = { version = "1.0", features = ["derive"] }

# rss
feed-rs = "1.3"
getrandom = { version = "0.2.8", features = ["js"] }
console_error_panic_hook = "0.1.7"
